# UMassCTF-2023-challenges-mirror

./: .gitignore  .gitmodules  README.md
blockchain/csgo_but_decentralised/: README.md
crypto/wrath/: Dockerfile  Dockerfile.fast  flag.txt  wrath.py  wrathsweatingbuddha.py
deployment/: main.tf
deployment/challenge_repositories/: ecr.tf  outputs.tf  var.tf
deployment/cluster_challenge/: cluster_challenge.tf  var.tf
deployment/cluster_setup/: outputs.tf  var.tf  vpc.tf
deployment/ecs/: alarms.tf  auto_scaling.tf  lb.tf  service.tf  task_definition.tf  var.tf
deployment/ecs_task_definition/: ecr.tf  iam.tf  logs.tf  outputs.tf  task_definition.tf  var.tf
deployment/network/: outputs.tf  security_group.tf  subnet.tf  var.tf
deployment/rds/: outputs.tf  rds.tf  security_group.tf  subnet.tf  var.tf
misc/blackjack/: README.md  config.json
misc/blackjack/src/: Dockerfile  (+1 more)
misc/jeopardyv3/: README.md  config.json  solution.txt
pwn/babysc/: README.md  config.json  solution.md
pwn/babysc/src/webide/: Cargo.toml  index.html
pwn/babysc/src/webide/src/: interpreter.rs  webide.rs
pwn/last_minute_pwn/: description.md  exploit.py
rev/diamond/: README.md  solution.md
rev/java_jitters/: README.md  solution.md
rev/java_jitters2/: README.md
rev/pipelinining/: description.md  flag.txt
rev/sapphire/: README.md  solution.md
rev/welcome_to_hell/: description.md  flag.txt
web/JS-ON/: README.md  config.json
web/JS-ONv2/: README.md
web/deepfrying/: README.md
web/secureblocks/: README.md  Solution.md
web/umassdining2/: README.md  solve.py
(+92 files in other folders)
